# open-community-groups

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.dev.yml  justfile  package-lock.json  package.json  web-test-runner.config.mjs
ocg-hypermedia-api/: Cargo.toml  Dockerfile
ocg-hypermedia-api/src/: config.rs  db.rs  main.rs  router.rs
ocg-hypermedia-api/src/handlers/: community.rs  error.rs  event.rs  extractor.rs  extractors.rs  group.rs  mod.rs
ocg-hypermedia-api/src/handlers/community/: explore.rs  home.rs  mod.rs  templates.rs
ocg-hypermedia-api/src/handlers/event/: mod.rs  templates.rs
ocg-hypermedia-api/src/handlers/group/: mod.rs  templates.rs
ocg-hypermedia-api/src/templates/: filters.rs  helpers.rs  mod.rs
ocg-hypermedia-api/src/templates/community/: common.rs  explore.rs  home.rs  mod.rs
ocg-hypermedia-api/src/templates/event/: mod.rs
ocg-hypermedia-api/src/templates/group/: mod.rs
ocg-hypermedia-api/static/js/: index.js
ocg-hypermedia-api/static/js/common/: common.js
ocg-hypermedia-api/static/js/modules/: calendar.js  common.js  map.js  spinner.js
ocg-hypermedia-api/static/styles/: index.css
ocg-hypermedia-api/templates/: .djlintrc  common.html  macros.html
ocg-hypermedia-api/templates/community/: base.html  base_explore.html  base_no_footer.html  events.html  explore.html  explore_base.html  explore_events.html  explore_filters.html  explore_groups.html  filters.html  footer.html  groups.html  header.html  home.html  home_gallery.html  index.html  index_events_list.html
ocg-hypermedia-api/templates/community/explore/: base.html  entity_section_base.html  events.html  filters.html  groups.html  index.html  navigation_links.html  pagination.html
ocg-hypermedia-api/templates/community/home/: event.html  gallery.html  group.html  index.html  stats.html
ocg-hypermedia-api/templates/event/: home.html
ocg-hypermedia-api/templates/group/: home.html  index.html
ocg-redirector/: Cargo.toml  Dockerfile
ocg-redirector/src/: config.rs  db.rs  main.rs  router.rs
ocg-server/: Cargo.toml  Dockerfile  Dockerfile.dev  build.rs
ocg-server/src/: activity_tracker.rs  auth.rs  config.rs  db.rs  handlers.rs  main.rs  router.rs  services.rs  templates.rs  types.rs  util.rs  validation.rs
ocg-server/src/auth/: mod.rs  tests.rs
ocg-server/src/db/: activity_tracker.rs  alliance.rs  auth.rs  common.rs  community.rs  contract_tests.rs  dashboard.rs  event.rs  group.rs  images.rs  jobs.rs  landscape.rs  meetings.rs  mock.rs  mod.rs  notifications.rs  payments.rs  pool.rs  site.rs
ocg-server/src/db/dashboard/: admin.rs  alliance.rs  common.rs  community.rs  group.rs  mod.rs  user.rs
ocg-server/src/handlers/: alliance.rs  auth.rs  community.rs  dashboard.rs  error.rs  event.rs  extractors.rs  group.rs  images.rs  meetings.rs  mod.rs  notifications.rs  payments.rs  site.rs  tests.rs
ocg-server/src/handlers/alliance/: tests.rs
ocg-server/src/handlers/api/: admin.rs  auth.rs  error.rs  mod.rs  public.rs  tokens.rs  types.rs  user.rs
ocg-server/src/handlers/auth/: mod.rs  tests.rs
ocg-server/src/handlers/community/: explore.rs  home.rs  mod.rs  tests.rs
ocg-server/src/handlers/dashboard/: alliance.rs  common.rs  community.rs  group.rs  jobs.rs  mod.rs  user.rs
ocg-server/src/handlers/error/: mod.rs  tests.rs
ocg-server/src/handlers/event/: mod.rs  tests.rs
ocg-server/src/router/: api.rs  dashboard.rs  mod.rs  tests.rs
ocg-server/src/services/: images.rs  meetings.rs  mod.rs  notifications.rs  payments.rs
ocg-server/src/templates/: alliance.rs  auth.rs  common.rs  community.rs  dashboard.rs  event.rs  filters.rs  group.rs  helpers.rs  mod.rs  notifications.rs  pagination.rs  site.rs
ocg-server/src/types/: alliance.rs  community.rs  event.rs  group.rs  jobs.rs  landscape.rs  location.rs  mod.rs  pagination.rs  payments.rs  permissions.rs  questionnaire.rs  search.rs  site.rs  user.rs
ocg-server/static/css/: styles.src.css
ocg-server/static/styles/: index.css
ocg-server/templates/: common.html
ocg-server/templates/alliance/: group_card.html  page.html
ocg-server/templates/auth/: log_in.html  sign_up.html  update_user.html  user_menu_section.html
ocg-server/templates/common/: base.html  card_small_base.html  demo_alert.html  event_card.html  event_card_medium.html  event_card_small.html  footer.html  header.html  new_group_modal.html  small_event_card.html
ocg-server/templates/community/: base.html  footer.html  group_card.html  header.html  page.html  stats.html
ocg-server/templates/dashboard/: audit_logs.html  dashboard_base.html  dashboard_macros.html  jobs.html
ocg-server/templates/event/: attend_button.html  attendance_macros.html  cfs_modal.html  check_in_page.html  page.html
ocg-server/templates/group/: base.html  event_card.html  header.html  membership_button.html  page.html  past_event_card.html  social_networks.html  spotlights.html  store.html  upcoming_event_card.html
ocg-server/templates/macros/: badges.html  cards.html  dashboard.html  email.html  event_form.html  explore.html  feedback.html  form_fields.html  header.html  maps.html  meta.html  pagination.html  question_answers.html  search.html  social.html  sponsor.html  stats.html  team.html  ui.html
ocg-server/templates/notifications/: alliance_team_invitation.html  base.html  cfs_submission_updated.html  community_team_invitation.html  email_macros.html  email_verification.html  event_attendance_canceled.html  event_canceled.html  event_custom.html  event_invitation.html  event_published.html  event_refund_approved.html  event_refund_rejected.html  event_refund_requested.html  event_reminder.html  event_rescheduled.html  event_series_canceled.html  event_series_published.html  event_waitlist_joined.html  event_waitlist_left.html  event_waitlist_promoted.html  event_welcome.html  group_custom.html  group_team_invitation.html  group_welcome.html  session_proposal_co_speaker_invitation.html  speaker_series_welcome.html  speaker_welcome.html
(+2008 files in other folders)
