[workspace]
resolver = "2"
members = [
    "ocg-server"
]

[workspace.package]
version = "0.5.0"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.91.1"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22"
askama = { version = "0.14.0", features = ["serde_json"] }
async-trait = "0.1.89"
aws-credential-types = "1.2.10"
aws-sdk-s3 = { version = "1.116.0", features = ["rustls"] }
aws-types = "1.3.10"
axum = { version = "0.8.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.2", features = ["form", "query"] }
axum-login = "0.18.0"
axum-messages = "0.8.0"
bytes = "1.11.0"
cached = { version = "0.56.0", features = ["async"] }
clap = { version = "4.5.53", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
emojis = "0.8.0"
figment = { version = "0.10.19", features = ["yaml", "env"] }
garde = { version = "0.22.1", features = ["derive", "url", "email"] }
hex = "0.4"
hmac = "0.12"
icalendar = "0.17.5"
image = { version = "0.25.9", default-features = false, features = ["gif", "jpeg", "png", "tiff", "webp"] }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }
markdown = "1.0.0-alpha.24"
mime_guess = "2.0.5"
minify-html = "0.18.1"
mockall = "0.14.0"
num-format = "0.4.4"
oauth2 = "5.0.0"
openidconnect = { version = "4.0.0", features = ["accept-rfc3339-timestamps"] }
openssl = { version = "0.10.75", features = ["vendored"] }
palette = "0.7.6"
password-auth = "1.0.0"
percent-encoding = "2.3.2"
postgres-openssl = "0.5.2"
quick-xml = "0.38.4"
qrcode = { version = "0.14.1", features = ["svg"] }
reqwest = { version = "0.12.24", features = ["json"] }
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_html_form = "0.2.8"
serde_json = "1.0.145"
serde_qs = "0.15.0"
serde_with = "3.16.1"
sha2 = "0.10.9"
strum = { version = "0.27", features = ["derive"] }
subtle = "2.5"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-postgres = { version = "0.7.15", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-time-0_3",
] }
tokio-util = { version = "0.7.17", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["auth", "fs", "set-header", "trace"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
which = "8.0.0"
