[package]
name = "ocg-hypermedia-api"
description = "Open Community Groups Hypermedia API"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
cached = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
deadpool-postgres = { workspace = true }
figment = { workspace = true }
markdown = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
