[package]
name = "ocg-hypermedia-api"
description = "Open Community Groups Hypermedia API"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
cached = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
deadpool-postgres = { workspace = true }
figment = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
serde = { workspace = true }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
unicode-segmentation = "1.12.0"
emojis = "0.6.4"
num-format = "0.4.4"

[dev-dependencies]
