[package]
name = "ocg-redirector"
description = "Open Community Groups redirector"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
figment = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tower = { workspace = true }
