[package]
name = "ocg-redirector"
description = "Open Community Groups redirector"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
figment = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
