[package]
name = "ocg-server"
description = "Open Community Groups server"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
cached = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
deadpool-postgres = { workspace = true }
emojis = { workspace = true }
figment = { workspace = true }
mime_guess = { workspace = true }
minify-html = { workspace = true }
num-format = { workspace = true }
openssl = { workspace = true }
palette = { workspace = true }
postgres-openssl = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]

[build-dependencies]
anyhow = { workspace = true }
sha2 = { workspace = true }
which = { workspace = true }
